테스트 실행 코드 추가

--- a/output/ide_generated_output.html
+++ b/output/ide_generated_output.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KODEX 나스닥100 데일리커버드콜 OTM 투자 분석</title>
+    <title>KODEX 나스닥100 데일리커버드콜 OTM ETF 2026 투자 분석</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&family=Noto+Sans+KR:wght@300;400;500;700;900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700;900&display=swap');
 
         body {
             background: #f1f5f9;
@@ -27,16 +27,9 @@
             height: 720px;
             background: white;
             box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.15);
-            /* 모서리 직각 유지 - border-radius 없음 */
             overflow: hidden;
             position: relative;
             flex-shrink: 0;
-        }
-
-        .glass-card {
-            background: rgba(255, 255, 255, 0.85);
-            backdrop-filter: blur(12px);
-            border: 1px solid rgba(255, 255, 255, 0.6);
         }
 
         .hover-lift {
@@ -300,7 +293,7 @@
             </div>
             <div class="bg-white rounded-xl p-4 text-center shadow-sm">
                 <p class="text-sm text-gray-500 mb-1">월 분배금</p>
-                <p class="text-2xl font-black text-emerald-600">140~170원</p>
+                <p class="text-2xl font-black text-emerald-600">150~180원</p>
                 <p class="text-xs text-gray-400">주당</p>
             </div>
             <div class="bg-white rounded-xl p-4 text-center shadow-sm">
